--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,14 +19,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node-version: ["20.x"]
+        node-version: ["22.x"]
         os: [ubuntu-latest]
-        php: [8.2, 8.3]
-        laravel: ["10.*", "11.*"]
+        php: [8.3, 8.4]
+        laravel: ["11.*"]
         include:
-          - laravel: 10.*
-            testbench: 8.*
-            collision: 7.*
           - laravel: 11.*
             testbench: 9.*
             collision: 8.*
